# devsecops-gh-actions-boilerplate

./: Dockerfile  main.tf  pyproject.toml
.github/workflows/: security-pipeline.yml
app/: main.py
